fix: button styling, section side z-index
fix: button styling, section side z-index

--- a/packages/core/sass/components/_section.scss
+++ b/packages/core/sass/components/_section.scss
@@ -36,7 +36,6 @@
       grid-area: head;
       grid-template-areas: "title actions toggle";
       grid-template-columns: 1fr auto auto;
-      z-index: 7;
       @include noselect();
       @extend #{$prefix}-bg--base;
       @extend #{$prefix}-border--b;
@@ -73,7 +72,7 @@
 
     &--placeholder {
       grid-area: body;
-      z-index: 6;
+      z-index: 2;
       @extend #{$prefix}-bg--base;
     }
 
@@ -128,6 +127,10 @@
       #{$base} {
         &--resizeHandle {
           display: none;
+        }
+
+        &--header {
+          z-index: 3;
         }
 
         &--title {
