--- a/packages/core/sass/theme/_button.scss
+++ b/packages/core/sass/theme/_button.scss
@@ -59,7 +59,7 @@
     }
 
     #{$base}__inner:active,
-    #{$base}__inner[data-active="true"] {
+    &[data-active="true"] #{$base}__inner {
       background-color: darker($color, 0.3);
       background-image: linear-gradient(0deg, rgba($base-color, 0.1), rgba($base-color, 0));
       box-shadow: 1px 1px 2px rgba(#060409, 0.75) inset, -1px -1px 2px rgba(#060409, 0.5) inset;
